virt01/manual/tools/adminer/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      serviceAccountName: adminer-sa
      containers:
        - name: adminer
          image: harbor.nf.lab/proxy.docker.io/adminer:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            name: adminer
            protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
