virt01/manual/tools/adminer/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-svc
  labels:
    app: adminer
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: adminer-svc-port
  selector:
    app: adminer
